--- a/webapp/templates/webapp/register.html
+++ b/webapp/templates/webapp/register.html
@@ -9,7 +9,7 @@
       <h5>Start managing your client today!</h5>
       <hr />
       <br />
-      <form action="" method="post" autocomplete="off">
+      <form action="{% url 'register' %}" method="POST" autocomplete="off">
         {% csrf_token %}
 
         {{ form.username|as_crispy_field }}
