--- a/webapp/templates/webapp/update-record.html
+++ b/webapp/templates/webapp/update-record.html
@@ -9,7 +9,7 @@
       <h6>Update your record down below.</h6>
       <hr />
       <br />
-      <form action="" method="post" autocomplete="off">
+      <form action="{% url 'update-record' %}" method="POST" autocomplete="off">
         {% csrf_token %}
         {{ form.first_name|as_crispy_field }}
         <br />
